<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Divine District</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_with_facebook">Login With Facebook</string>
    <string name="login_with_google">Login With Google</string>
    <string name="login_manually">Login Manually</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet ?</string>
    <string name="register_here">Register Here</string>
    <string name="image">image</string>
     <string name="app_id">1610219072600732</string>
     <string name="register">Register</string>
     <string name="terms_conditions">Terms &amp; conditions</string>
     <string name="static_text">Lorem ipsum is simply dummy text of the printing and typesetting screen.Lorem ipsum has been the industry standard dummy text ever since the 1550s. When an unknown printer took a galley of type and scrambled it to make a type specimen book. </string>
     <string name="list_of_persnel_org_">List of personel org...</string>

</resources>
