<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical"
    android:weightSum="10" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="9"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" />

        <Button
            android:id="@+id/loginWithFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/facebook" />

        <Button
            android:id="@+id/loginWithGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/google" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/sign_in_with_email"
            android:textColor="@color/dark_blue"
            android:textSize="20dp" />

        <!-- ************ username ********************* -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image"
                android:src="@drawable/username" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:src="@drawable/hseprator" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:background="@null"
                android:hint="Username"
                android:singleLine="true"
                android:textColorHint="@color/white" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/hseprator" />
        <!-- ************ password ******************** -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image"
                android:src="@drawable/password" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="9dp"
                android:src="@drawable/hseprator" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:background="@null"
                android:hint="Password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColorHint="@color/white" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/hseprator" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/forgot_password"
            android:textColor="@drawable/textview_selector_white_default"
            android:textSize="@dimen/text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account_yet"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/register_here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/register_here"
                android:textColor="@drawable/textview_selector_blue_default"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <!-- ************** signIn button *************************** -->

    <LinearLayout
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/dark_blue"
        android:gravity="center" >

        <Button
            android:id="@+id/signINBbT"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:drawableLeft="@drawable/signin"
            android:drawablePadding="8dp"
            android:text="SignIn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

</LinearLayout>